[package]
name = "name-it-macros"
version = "0.1.3"
edition = "2021"
description = "name-it helper crate"
repository = "https://github.com/GoldsteinE/name-it"
license = "BlueOak-1.0.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full", "visit-mut"] }
