[package]
name = "adapt-crate-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
color-eyre = "0.6.2"
either = "1.7.0"
glob = "0.3.0"
hex = "0.4.3"
sha3 = "0.10.2"
tempfile = "3.3.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
twoway = "0.2.2"
walkdir = "2.3.2"
